src/snapshots/afrotd__parser__tests__interpretation_html_6.2.2_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.2.2.II
        </p>
    </div>
    <div class="message-body">
        <p>
            Ein Free Kick von der A-35 geht, unberührt von Team B, zwischen den
            Goallines ins Aus und Team A foult, nachdem der Ball ins Aus ging.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team B kann wählen, ob Team A nach einer 5Meterstrafe, gefolgt
                von einer 15-Meterstrafe noch einmal kickt; oder ob Team B den
                Ball entweder am Inbounds Spot von der 50-Meterlinie oder am
                Inbounds Spot, 20 Meter jenseits, wo der Ball ins Aus ging,
                selbst ins Spiel bringen will.
            </p>
        </details>
    </div>
</article>
