src/snapshots/afrotd__parser__tests__interpretation_html_6.2.2_4.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.2.2.IV
        </p>
    </div>
    <div class="message-body">
        <p>
            Free Kick von der A-35. B17 springt im Spielfeld hoch und ist der
            erste Spieler, der Team A’s Free Kick ergreift, während er sich
            noch in der Luft befindet. Er landet anschließend im Aus und hat
            den Ball in seinem Besitz.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Kein Foul. Team B’s Ball an dem Punkt, an dem B17 mit dem Ball
                die Seitenlinie überquert. B17 berührt den Kick inbounds. Das
                Fangen ist nicht vollständig, aber dem Fangen geht die
                Berührung voraus (Regel 2.11.4). Die Regelung ist dieselbe, als
                wenn B17 auf dem Boden stehen würde (Regel 2.27.15).
            </p>
        </details>
    </div>
</article>
