src/snapshots/afrotd__parser__tests__interpretation_html_6.3.14_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.3.14.II
        </p>
    </div>
    <div class="message-body">
        <p>
            4. und 6 von der A-24. Team A befindet sich in einer Scrimmage Kick
            Formation und puntet. B50 hat sich innerhalb des Körperrahmens des
            Snappers aufgestellt und befindet sich innerhalb eines Meters an
            der Scrimmage Line. Der Punt rollt an der B-40 ins Aus.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Live Ball Foul von Team B. Team A kann die Strafe annehmen und
                hat einen 4. und 1 von der A-29 oder die Strafe ablehnen und
                dann ist es B’s Ball, 1. und 10 von der B-40.
            </p>
        </details>
    </div>
</article>
