src/snapshots/afrotd__parser__tests__interpretation_html_6.3.14_4.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.3.14.IV
        </p>
    </div>
    <div class="message-body">
        <p>
            4. und 4 von der B-20. Team A hat sich zu einem Fieldgoalversuch
            aufgestellt. Team A hat fünf Spieler im Backfield. Defense Linemen
            B55, B57 und B78 stehen Schulter an Schulter nebeneinander. B57
            steht Guard A66 direkt gegenüber, während sich B55 und B78 rechts
            bzw. links an den Lücken neben A66’s Schultern befinden. Nach dem
            Snap bewegen sich alle drei vorwärts. Alle drei berühren
            hauptsächlich A66. Der Holder nimmt den Snap, steht auf und wirft
            einen vollständigen Pass auf den berechtigten A88, der an der B-10
            getackelt wird.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Foul von Team A, illegale Formation. Foul von Team B,
                Drei-gegen-Einen (Offense Lineman). Die Fouls heben sich auf
                und der Down wird wiederholt.
            </p>
        </details>
    </div>
</article>
