src/snapshots/afrotd__parser__tests__interpretation_html_6.3.1_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.3.1.II
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A’s unberührter Punt oder Fieldgoalversuch fliegt jenseits der
            neutralen Zone und wird durch einen starken Wind zurückgeweht und
            berührt zuerst den Boden, einen Spieler oder einen Schiedsrichter
            hinter der neutralen Zone.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Der Kick hat die neutrale Zone nicht überquert, bis er den
                Boden, einen Spieler, einen Schiedsrichter oder irgendetwas
                jenseits der neutralen Zone berührt. Jeder Scrimmage Kick kann
                nach dem Fangen oder Recovern durch Team B oder dem Fangen oder
                Recovern durch Team A in oder hinter der neutralen Zone advanct
                werden, wenn der Ball die neutrale Zone nicht überquert hat
                (Regel 2.16.7).
            </p>
        </details>
    </div>
</article>
