src/snapshots/afrotd__parser__tests__interpretation_html_6.3.1_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.3.1.III
        </p>
    </div>
    <div class="message-body">
        <p>
            Der Scrimmage Kick überquert nicht die neutrale Zone, als B1 durch
            A1 bei der Möglichkeit, einen Kick zu fangen, behindert wird.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Die Behinderung der Möglichkeit, einen Kick zu fangen, trifft
                nicht zu und alle Spieler sind berechtigt, den Ball zu
                berühren, zu recovern oder zu advancen. Daher dürfen alle
                Spieler einen Gegner bei dem tatsächlichen Versuch, an den Ball
                zu gelangen, legal wegdrücken (Regel 9.3.5); aber kein Spieler
                darf einen Gegner festhalten, damit dieser nicht an den Ball
                oder damit ein Mitspieler an den Ball gelangen kann (Regeln
                9.1.5 Ausnahme 3).
            </p>
        </details>
    </div>
</article>
